Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2080

crash when attempting to modify an exchange's alternate

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.5
    • 0.6
    • C++ Broker
    • None
    • main trunk

    Description

      C++ broker asserts due to a null pointer dereference when user attempt to re-declare an existing exchange, but add a new alternate exchange.
      Will attach example test script that reproduces the problem.

      Attachments

        1. qpid-2080-test.patch
          3 kB
          Ken Giusti
        2. qpid-2080-fix.patch
          1 kB
          Ken Giusti

        Activity

          People

            tross Ted Ross
            kgiusti Ken Giusti
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: