QPID-2080 - crash when attempting to modify an exchange's alternate Committed patch from Ken Giusti

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@811188 13f79535-47bb-0310-9956-ffa450edef68